UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_GCP_Opportunity_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Cust_Act_Sales_Mat__c</fullName>
        <label>Customer Account Sales Mat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GCP_Customer_Code_temp__c</fullName>
        <label>GCP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Updated_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ims_Mat_Month_Range__c</fullName>
        <label>Ims Mat Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Insights__c</fullName>
        <label>Phoenix Comments/Insights</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cooling_Period__c</fullName>
        <label>Cooling Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Position__c</fullName>
        <label>Current Position</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cust_Act_Mkt_Sh__c</fullName>
        <label>Customer Account Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cust_Act_Volume_Mat_Eu__c</fullName>
        <label>Customer Account Volume Mat Eu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Code__c</fullName>
        <formula>Phoenix_Customer__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Name__c</fullName>
        <formula>Phoenix_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Opp_Sales__c</fullName>
        <label>Customer Opp Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Opp_TPT_Perc__c</fullName>
        <label>Customer Opp TPT (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Opp_TPT__c</fullName>
        <label>Customer Opp TPT ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP Opportunity Trackers</relationshipLabel>
        <relationshipName>GCP_Market_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Actual_TPT_Per__c</fullName>
        <label>DRL Actual TPT %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Actual_TPT__c</fullName>
        <label>DRL Actual TPT $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Drl_Act_Price__c</fullName>
        <label>DRL Account Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Drl_Act_Sales__c</fullName>
        <label>DRL Account Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Drl_Act_Volume_Eu__c</fullName>
        <label>DRL Account Volume Eu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Drl_Mkt_Sh_Act__c</fullName>
        <label>DRL Marketing Share Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_AcctShareofWalletUserInput__c</fullName>
        <label>Est Acct Share of Wallet (User Input)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Mkt_Share_Method__c</fullName>
        <label>Est Acct Mkt Share Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Est Account Value Input</fullName>
                </value>
                <value>
                    <fullName>Use User Input</fullName>
                </value>
                <value>
                    <fullName>Use Default Header</fullName>
                </value>
                <value>
                    <fullName>Use Customer Feedback (Bright)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Mkt_Share_User_Input__c</fullName>
        <label>Est Acct Mkt Share  (User Input)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Price_EU_User_Input__c</fullName>
        <label>Est Acct Price ($/EU) (User Input)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Sales__c</fullName>
        <label>Estimate Account Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Share_of_Wallet_Method__c</fullName>
        <label>Est Acct Share of Wallet Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use User Input</fullName>
                </value>
                <value>
                    <fullName>Use Default Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Share_of_Wallet__c</fullName>
        <label>Estimate Account Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Total_Vol_EU__c</fullName>
        <label>Estimate Account Total Vol (EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Vol_EU_BRIGHT__c</fullName>
        <label>Est Acct Vol (EU) (BRIGHT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Vol_EU_User_Input__c</fullName>
        <label>Est Acct Vol (EU) (User Input)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Acct_Vol_Method__c</fullName>
        <label>Est Acct Vol Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use User Input</fullName>
                </value>
                <value>
                    <fullName>Use Calculation of Est Acct Mkt Share</fullName>
                </value>
                <value>
                    <fullName>Use Proposed Total Selling Units (BRIGHT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Price_EU_Lowest_Price__c</fullName>
        <label>Est Price ($/EU)(Lowest Price)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Price_EU__c</fullName>
        <label>Estimate Price($/EU)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Price_Method__c</fullName>
        <label>Est Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use User Input</fullName>
                </value>
                <value>
                    <fullName>Use Lowest Price</fullName>
                </value>
                <value>
                    <fullName>Use GCP Suggested Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Estimate_Account_Marketing_Share__c</fullName>
        <label>Estimate Account Marketing Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GCP_Suggested_Lowest_Price__c</fullName>
        <label>GCP Suggested Lowest Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ims_Drl_Mkt_Sh_Qtr__c</fullName>
        <label>Ims DRL Marketing Share Qtr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ims_Mat_Volume_Eu__c</fullName>
        <label>Ims Mat Volume Eu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ims_Qtr_Month_Range__c</fullName>
        <label>Ims Qtr Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Latest_Bid_Created__c</fullName>
        <label>Latest Bid Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Latest_Bid_Date__c</fullName>
        <label>Latest Bid Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Opportunity_Probability__c</fullName>
        <label>Opportunity Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Prof_Month_Range__c</fullName>
        <label>Prof Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Market_Sales__c</fullName>
        <label>Total Market Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Market_Vol_MAT_EU__c</fullName>
        <label>Total Market Vol(MAT - EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>GCP Opportunity Trackers</relationshipLabel>
        <relationshipName>GCP_Opportunity_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>- True Opportunity --&gt; Where it is out of colling period and It is not under price/Supply Constraint. It can be Modified by the user to Not an Oppty
- Not An Opportunity --&gt; User Input followed by his comments in the comments - Just open Comment section after selecting this Option.
- Price Constraint  --&gt;  This will be Auto selected If It is rejected by Marketing in bid process. Can Also be a user selection without any bid. After selecting this option, pop out a message &apos;Do you want to send it to Panorama for Cost Improvment Program(CIP)?&apos; 
- Supply Constraint  --&gt;This will be Auto selected If It is rejected by SCM in bid process. Can Also be a user selection without any bid. After selecting this option, pop out a message &apos;Do you want to send it to Panorama for Cost Improvment Program(CIP)?&apos;
- Awarded --&gt; When there is an active award or contract on this prod. This is automatically selected.
- In Bid --&gt; If there is a bid in progress on this prod, automatically selected.</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not An Opportunity</fullName>
                </value>
                <value>
                    <fullName>Price Constraint</fullName>
                </value>
                <value>
                    <fullName>Supply Constraint</fullName>
                </value>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>In Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Identifier_Test__c</fullName>
        <formula>GCP_Product_Family__c +&apos;_&apos;+ Phoenix_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Identifier Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_CustAct_Sales__c</fullName>
        <label>CVS CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_CustAct_Volume__c</fullName>
        <label>CVS CustAct Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_VolShare_Percent__c</fullName>
        <label>CVS VolShare Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_CustAct_Sales__c</fullName>
        <label>Cardinal CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_CustAct_Volume__c</fullName>
        <label>Cardinal CustAct Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_VolShare_Percent__c</fullName>
        <label>Cardinal VolShare Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <label>Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Inline_RFP_Units__c</fullName>
        <label>Inline RFP Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Major_CustAct_Sales__c</fullName>
        <label>Major CustAct Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Major_CustAct_Volume__c</fullName>
        <label>Major CustAct Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Major_VolShare_Percent__c</fullName>
        <label>Major VolShare Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_NorthStar_CustAct_Sales__c</fullName>
        <label>NorthStar CustAct Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_NorthStar_CustAct_Vol__c</fullName>
        <label>NorthStar CustAct Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Sum_of_Sku_est_vol__c</fullName>
        <label>Sum of Sku est vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <label>Vision Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_Date__c</fullName>
        <label>Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_isAlerted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAlerted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isRelevance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relevant Product Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isSentToPanorama__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSentToPanorama</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isShareExpansion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isShareExpansion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isZeroOptyVal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision isZeroOptyVal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cogs_per_unit__c</fullName>
        <label>COGS Per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cooling_period__c</fullName>
        <label>GCP Cooling Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_position__c</fullName>
        <label>GCP Current Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcp_customer_name__c</fullName>
        <label>GCP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>record_Id__c</fullName>
        <label>GCP Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCP Opportunity Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Customer_Code__c</columns>
        <columns>GCP_Product_Family__c</columns>
        <columns>Phoenix_GCP_Suggested_Lowest_Price__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Customer__c</field>
            <operation>equals</operation>
            <value>Walgreen Company</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>gcp_customer_name__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <columns>GCP_Product_Family__c</columns>
        <columns>GCP_Customer_Code_temp__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCP Opp Tracker-{0000000}</displayFormat>
        <label>GCP Opportunity Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Opportunity Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>